class6/pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend2
spec:
  containers:
  - name: app
    image: nginx
    resources:
      requests:
        memory: "65Mi"
        cpu: "100m"
      limits:
        memory: "128Mi"
        cpu: "200m"
